hasqd/tests/coptest/usr/ab/hsl/neg/fid_hsl_ag_cf_db.inp
agent config database "a" "b"
quit
